linked tailwind to main.handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Fridge Friend</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
-    <!--Replace with your tailwind.css once created-->
+    <link rel="stylesheet" href="/assets/css/tailwind.css" />
     <link rel="icon" type="image/png" href="/assets/favicon.png" />
 </head>
 
@@ -18,7 +17,7 @@
     </main>
 
     <footer>
-        
+
     </footer>
     {{!-- {{#if loggedIn}}
     <script src="/javascript/logout.js"></script>
