--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Fridge Friend</title>
-    <link rel="stylesheet" href="/assets/css/tailwind.css" />
-    <link rel="icon" type="image/png" href="/assets/favicon.png" />
+    <link rel="stylesheet" href="/stylesheets/tailwind.css" />
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
 </head>
 
 <body {{!-- class="bg-grey-lightest font-sans leading-normal tracking-normal" --}}>
