tested out a couple favicons

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,4 @@
-<div class="flex md:flex-row-reverse flex-wrap">
+{{!-- <div class="flex md:flex-row-reverse flex-wrap">
 		
 		 <!--Main Content-->
          <div class="w-full md:w-4/5 bg-grey-lightest">
@@ -34,4 +34,4 @@
                </ul>
             </div>
          </div>
-      </div>
+      </div> --}}
