--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Fridge Friend</title>
     <link rel="stylesheet" href="/stylesheets/tailwind.css" />
-    <link rel="icon" type="image/png" href="/images/favicon.png" />
+    <link rel="icon" type="image/png" href="/images/favicon-1.png" />
 </head>
 
 <body {{!-- class="bg-grey-lightest font-sans leading-normal tracking-normal" --}}>
