--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,9 +10,9 @@
     <link rel="icon" type="image/png" href="/images/favicon-1.png" />
 </head>
 
-<body {{!-- class="bg-grey-lightest font-sans leading-normal tracking-normal" --}}>
+<body>
 
-    <main>
+    <main {{!-- class="bg-grey-lightest font-sans leading-normal tracking-normal" --}}>
         {{{ body }}}
     </main>
 
