fixed main content/sidebar width

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -17,13 +17,13 @@
     </div>
 </nav>
 {{!-- Sidebar & Main Content Container --}}
-<div class="container flex">
+<div class="flex">
     {{!-- Sidebar Content --}}
     <div class="w-1/4 h-screen bg-blue-100">
-        <p>Hola</p>
+        <p>¡Hola!</p>
     </div>
     {{!-- Main Content --}}
     <div class="w-3/4 h-screen bg-red-100">
-        <p>Hello</p>
+        <p>Hello!</p>
     </div>
 </div>
