--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -26,7 +26,7 @@
     <div class="w-3/4 h-screen bg-red-100">
         {{!-- Card Container for Inventory --}}
         <div class="container mt-5 mx-auto px-2">
-            <div class="sm:flex">
+            <div class="flex-wrap md:flex">
                 {{#each inventories as |inventory|}}
                     {{> fridge-info inventory}}
                 {{/each}}
