--- a/views/partials/fridge-info.handlebars
+++ b/views/partials/fridge-info.handlebars
@@ -1,3 +1,10 @@
 <div class="flex-1 text-center bg-gray-400 px-5 py-5 m-2 rounded">
-    <div class=""
+    <div class="items-center">
+        <div class="m-4">
+            <h2 class="text-md text-indigo-600 font-bold uppercase">{{item_name}}</h2>
+            <p class="text-sm text-indigo-400">Quantity: {{quantity}}</p>
+            <p class="text-sm text-indigo-400">Expires: 02/28/21</p>
+            <button class="bg-red-400 hover:bg-red-800 font-bold py-2 px-4 rounded">Delete (Icon)</button>
+        </div>
+    </div>
 </div>
