played with some tailwind for the login page

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -9,7 +9,7 @@
     <div class="w-full block flex-grow sm:flex sm:items-center sm:w-auto">
         <div>
             {{!-- This needs to be on the right of the screen --}}
-            <a id="logout" class="inline-flex text-sm px-4 py-2 leading-none 
+            <a id="logout" class="inline-flex text-sm px-4 py-2 leading-none float-right
                 border rounded text-white border-white hover:border-transparent hover:text-blue-500 hover:bg-white mt-4 md:mt-0">
                 Logout
             </a>
