added input/buttons for quantity

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -23,6 +23,11 @@
     </div>
     {{!-- Main Content --}}
     <div class="w-3/4 h-screen bg-red-100">
+        {{!-- Welcome Message Container --}}
+        <div class="container mt-5 mx-auto px-4">
+            <h2 class="capitalize text-6xl">hello, username!</h2>
+            <p class="capitalize text-3xl">here's what's in your fridge!</p>
+        </div>
         {{!-- Card Container for Inventory --}}
         <div class="container mt-5 mx-auto px-2">
             <div class="flex-wrap md:flex">
@@ -32,7 +37,6 @@
             </div>
         </div>
     </div>
-    
 </div>
 {{!-- Choose one, delete other --}}
 <!--Header Alert-->
