--- a/views/partials/fridge-info.handlebars
+++ b/views/partials/fridge-info.handlebars
@@ -2,7 +2,12 @@
     <div class="items-center">
         <div class="m-4">
             <h2 class="text-md text-indigo-600 font-bold uppercase">{{item_name}}</h2>
-            <p class="text-sm text-indigo-400">Quantity: {{quantity}}</p>
+            <div class="number-input">
+                <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()" ><i class="fas fa-minus"></i></button>
+                <input class="quantity" min="1" name="quantity" value="{{quantity}}" type="number">
+                <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()" class="plus"><i class="fas fa-plus"></i></button>
+            </div>
+            {{!-- <p class="text-sm text-indigo-400 items-center">Quantity: <i class="fas fa-minus"></i> <input type="number" rows="1" cols="3" id="quantity" name="quantity" value="{{quantity}}"></input> <i class="fas fa-plus"></i></p> --}}
             <p class="text-sm text-indigo-400">Expires: 02/28/21</p>
             <button class="bg-red-400 hover:bg-red-800 font-bold py-2 px-4 rounded">Delete (Icon)</button>
         </div>
