--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -16,15 +16,15 @@
     </div>
 </nav>
 {{!-- Sidebar & Main Content Container --}}
-<div class="flex">
+<div class="flex-wrap md:flex">
     {{!-- Sidebar Content --}}
-    <div class="w-1/4 h-screen bg-blue-100">
+    <div class="my-0 md:w-1/4 md:h-screen w-screen bg-blue-100">
         <p>¡Hola!</p>
     </div>
     {{!-- Main Content --}}
-    <div class="w-3/4 h-screen bg-red-100">
+    <div class="md:w-3/4 md:h-screen w-screen bg-red-100">
         {{!-- Welcome Message Container --}}
-        <div class="container mt-5 mx-auto px-4">
+        <div class="container md:mt-5 mx-auto px-4">
             <h2 class="capitalize text-6xl">hello, username!</h2>
             <p class="capitalize text-3xl">here's what's in your fridge!</p>
         </div>
