feature/homepage-layout

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,11 @@
     <title>Fridge Friend</title>
     <link rel="stylesheet" href="/stylesheets/tailwind.css" />
     <link rel="icon" type="image/png" href="/images/favicon-1.png" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans:wght@300&family=Pacifico&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="/stylesheets/style.css" />
 </head>
 
 <body>
