--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,6 +24,8 @@
     {{!-- {{#if loggedIn}}
     <script src="/javascript/logout.js"></script>
     {{/if}} --}}
+
+    <script src ="/javascript/modal.js"></script>
 </body>
 
 </html>
