--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
 
     </footer>
     <!--Toast Alert -->
-    <div class="alert-toast fixed bottom-0 right-0 m-8 w-5/6 md:w-full max-w-sm">
+    <div class="hidden alert-toast fixed bottom-0 right-0 m-8 w-5/6 md:w-full max-w-sm">
         <input type="checkbox" class="hidden" id="footertoast">
         <label class="close cursor-pointer flex items-center justify-between w-full p-2 bg-red-500 h-14 rounded shadow-lg text-white" title="close" for="footertoast">
             <span><i class="fas fa-bell mx-3"></i><b class="mr-2">Alert!</b>content of the alert</span>
