feature/login--oops

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -19,8 +19,7 @@
     <div class="title">
       <h1 class="text-5xl text-center mt-10">Fridge Friend</h1>
     </div>
-    {{!-- this is the form for user input --}}
-    
+    {{!--form for user LOGIN input --}}
       <form class="login-form p-10">
         <div>
           <H6 class="font-extralight text-sm">email</H6>
@@ -37,10 +36,15 @@
         <div>
           <button
             class="pacifico font-extralight text-sm p-1.5 mt-2 bg-blue-100 hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-blue-100 focus:ring-opacity-50 rounded-lg"
-            type="submit">sign in</button>
+            type="submit">login</button>
         </div>
       </form>
-    
- 
+
+{{!-- to be rerouted to the signup page --}}
+       <div class="new-user text-sm p-10">
+        Are you new to Fridge Friend?
+        <br>
+        Click <a href="" class="text-blue-400">here</a> to sign up!
+    </div>
   </div>
 </div>
