--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -41,6 +41,7 @@
     {{/if}} --}}
 
     <script src ="/javascript/modal.js"></script>
+    <script src="/javascript/login.js"></script>
 </body>
 
 </html>
