--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,23 +1,53 @@
-<!DOCTYPE html>
-<html>
+<div class="flex flex-wrap">
+    <div class="w-1/2 h-screen bg-blue-100">
+        {{!-- this is where the icons will go --}}
 
-<head>
-    <title>Fridge Friend</title>
-</head>
+        <div class="inset-x-0 bottom-0">
+            {{!-- this is where text will go about the app --}}
+            <h1 class="pl-10 text-2xl text-center">Keep your fridge contents up to date!</h1>
+            <p class="text-center pl-5 pr-5 pt-5 text-sm">Welcome to Fridge Friend! Your reliable pal that will
+                not only help you keep track of the items in your fridge, but also hit you up when things
+                are about to go expire! As your friend, we are dedicated to helping you reduce waste, and make the most
+                out of
+                the food in your fridge by giving you the ability to add items, adjust items, and
+                get rid of items.
+            </p>
+        </div>
+    </div>
 
-<body>
-    <form id="signup" name="signup" method="post" action="/signup">
-        <label for="email">Email Address</label>
-        <input class="text" name="email" type="email" />
-        <label for="firstname">Firstname</label>
-        <input name="firstname" type="text" />
-        <label for="lastname">Lastname</label>
-        <input name="lastname" type="text" />
-        <label for="password">Password</label>
-        <input name="password" type="password" />
-        <input class="btn" type="submit" value="Sign Up" />
-    </form>
+    <div class="w-1/2 h-screen">
+        <div class="logo">
+            <h1 class="text-5xl text-center mt-10">Fridge Friend</h1>
+        </div>
+        {{!-- this is the form for user input --}}
 
-</body>
+        <form class="signup-form p-10" name="signup" method="post" action="/signup">
+            <div>
+                <H6 class="font-extralight text-sm">username</H6>
+                <label for="username-signup"></label>
+                <input class="shadow-sm border-b-2 border-blue-200 rounded-sm focus:outline-none" type="text"
+                    id="username-signup" />
+            </div>
+            <div>
+                <H6 class="font-extralight text-sm">email</H6>
+                <label for="email-signup"></label>
+                <input class="shadow-sm border-b-2 border-blue-200 rounded-sm focus:outline-none" type="text"
+                    id="email-signup" />
+            </div>
+            <div>
+                <H6 class="font-extralight text-sm">password</H6>
+                <label for="password-signup"></label>
+                <input class="shadow-sm border-b-2 border-blue-200 rounded-sm focus:outline-none" type="password"
+                    id="password-signup" />
+            </div>
+            <div>
+                <button
+                    class="pacifico font-extralight text-sm p-1.5 mt-2 bg-blue-100 hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-blue-100 focus:ring-opacity-50 rounded-lg"
+                    type="submit">sign up</button>
+            </div>
+        </form>
 
-</html>
+    </div>
+
+ 
+</div>
