--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,17 +1,16 @@
 {{!-- Nav --}}
 <nav class="flex items-center justify-between flex-wrap bg-gray-800 p-6">
     <div class="flex items-center flex-shrink-0 text-white mr-6">
-        <span class="font-bold text-xl">
-            <img src="/images/favicon-1.png" width="30" height="30" alt="Fridge Friend Logo" class="inline-block" />
-            Fridge Friend
+        <span class="text-3xl">
+            <h1>Fridge Friend</h1>
         </span>
     </div>
     <div class="w-full block justify-end flex-grow sm:flex sm:items-center sm:w-auto">
         <div>
             <a id="logout"
-                class="inline-flex text-sm px-4 py-2 leading-none 
+                class="inline-flex text-sm px-4 py-2 leading-none pacifico
                 border rounded text-white border-white hover:border-transparent hover:text-blue-500 hover:bg-white mt-4 md:mt-0">
-                Logout
+               logout
             </a>
         </div>
     </div>
@@ -22,8 +21,8 @@
     <div class="my-0 md:w-1/4 md:h-screen w-screen bg-blue-100">
         <p>¡Hola!</p>
         <button type="button" id="myBtn"
-            class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
-            Add Item
+            class="pacifico mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+            add item
         </button>
 
 
@@ -33,8 +32,8 @@
     <div class="md:w-3/4 md:h-screen w-screen bg-red-100">
         {{!-- Welcome Message Container --}}
         <div class="container md:mt-5 mx-auto px-4">
-            <h2 class="capitalize text-6xl">hello, {{username}}!</h2>
-            <p class="capitalize text-3xl">here's what's in your fridge!</p>
+            <h2 class=" pacifico capitalize text-3xl">hello, {{username}}!</h2>
+            <p class="pacifico capitalize text-xl">here's what's in your fridge</p>
         </div>
         {{!-- Card Container for Inventory --}}
         <div class="container mt-5 mx-auto px-2">
