--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,9 +36,9 @@
             </svg>
         </label>
     </div>
-    {{!-- {{#if loggedIn}}
+    {{!-- {{#if loggedIn}} --}}
     <script src="/javascript/logout.js"></script>
-    {{/if}} --}}
+    {{!-- {{/if}} --}}
 
     <script src ="/javascript/modal.js"></script>
     <script src="/javascript/login.js"></script>
