--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -21,7 +21,7 @@
         </div>
         {{!-- this is the form for user input --}}
 
-        <form class="signup-form p-10" name="signup" method="post" action="/signup">
+        <form class="signup-form p-10" name="signup">
             <div>
                 <H6 class="font-extralight text-sm">username</H6>
                 <label for="username-signup"></label>
