adjusted modal so that it has calendar

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -91,7 +91,7 @@
                                     </div>
                                     <div>
                                         <label for="expiration">Expiration Date</label>
-                                        <input type="text" id="expiration" />
+                                        <input type="date" id="expDate" name="expDate">
                                     </div>
                                 </form>
 
