--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -42,6 +42,9 @@
 
     <script src ="/javascript/modal.js"></script>
     <script src="/javascript/login.js"></script>
+    <script src="tailwind.config.js"></script>
+
+
 </body>
 
 </html>
