--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 <div class="flex flex-wrap">
-  <div class="w-1/2 h-screen bg-blue-100">
+  <div class="w-1/2 h-screen bg-pink">
     {{!-- this is where the icons will go --}}
 
     <div class="inset-x-0 bottom-0">
