--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -71,7 +71,7 @@
                                 <form class="add-item-form">
                                     <div>
                                         <label for="food-item">Item:</label>
-                                        <input type="text" id="food-item" />
+                                        <input type="text" name="item_name" id="food-item" />
                                     </div>
                                     <div>
                                         <label for="qty">Qty:</label>
@@ -81,7 +81,7 @@
                                     </div>
                                     <div>
                                         <label for="category">Choose a category</label>
-                                        <select id="categories" name="categories">
+                                        <select id="categories" name="category_name">
                                             <option value="fruit">Fruit</option>
                                             <option value="veggies">Veggies</option>
                                             <option value="meat_seafood">Meat and Seafood</option>
@@ -93,7 +93,7 @@
                                     </div>
                                     <div>
                                         <label for="expiration">Expiration Date</label>
-                                        <input type="date" id="expDate" name="expDate">
+                                        <input type="date" id="expDate" name="expiration_date">
                                     </div>
                                 </form>
 
