fixed bug on add item

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -76,19 +76,19 @@
                                     <div>
                                         <label for="qty">Qty:</label>
                                         <button type="button" id="minusBtn"><i class="fas fa-minus"></i></button>
-                                        <input class="quantity" min="1" name="quantity" value="1" type="number" />
+                                        <input class="quantity" min="1" name="new_quantity" value=" " type="number" />
                                         <button type="button" id="plusBtn"><i class="fas fa-plus"></i></button>
                                     </div>
                                     <div>
                                         <label for="category">Choose a category</label>
                                         <select id="categories" name="category_name">
-                                            <option value="fruit">Fruit</option>
-                                            <option value="veggies">Veggies</option>
-                                            <option value="meat_seafood">Meat and Seafood</option>
-                                            <option value="dairy_eggs">Dairy and Eggs</option>
-                                            <option value="drinks">Drinks</option>
-                                            <option value="condiments">Condiments</option>
-                                            <option value="misc">Miscellaneous</option>
+                                            <option value="1">Fruit</option>
+                                            <option value="2">Veggies</option>
+                                            <option value="3">Meat and Seafood</option>
+                                            <option value="4">Dairy and Eggs</option>
+                                            <option value="5">Drinks</option>
+                                            <option value="6">Condiments</option>
+                                            <option value="7">Miscellaneous</option>
                                         </select>
                                     </div>
                                     <div>
