--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -44,7 +44,7 @@
        <div class="new-user text-sm p-10">
         Are you new to Fridge Friend?
         <br>
-        Click <a href="" class="text-dark-blue">here</a> to sign up!
+        Click <a href="/signup" class="text-dark-blue">here</a> to sign up!
     </div>
   </div>
 </div>
