added the javascript file but bugs are present

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -43,6 +43,7 @@
 
     <script src ="/javascript/modal.js"></script>
     <script src="/javascript/login.js"></script>
+   <script src="/javascript/filter.js"></script>
     <script src="tailwind.config.js"></script>
 
 
