--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -24,8 +24,35 @@
             add item
         </button>
 
-
-    </div>
+<button type="button" id="fruit" name="category_name1"
+            class="pacifico mt-3 w-full inline-flex justify-center pacifico font-extralight text-dark-blue text-sm p-1.5 mt-2 bg-blue-100 hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-blue-100 focus:ring-opacity-50 rounded-lg" value="1">
+            Fruit
+        </button>
+        <button type="button" id="veggies" name="category_name"
+            class="pacifico mt-3 w-full inline-flex justify-center pacifico font-extralight text-dark-blue text-sm p-1.5 mt-2 bg-blue-100 hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-blue-100 focus:ring-opacity-50 rounded-lg" value="2">
+            Veggies
+        </button>
+<button type="button" id="meatSeafood" name="category_name"
+            class="pacifico mt-3 w-full inline-flex justify-center pacifico font-extralight text-dark-blue text-sm p-1.5 mt-2 bg-blue-100 hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-blue-100 focus:ring-opacity-50 rounded-lg" value="3">
+            Meat and Seafood
+        </button>
+        <button type="button" id="dairyEggs" name="category_name"
+            class="pacifico mt-3 w-full inline-flex justify-center pacifico font-extralight text-dark-blue text-sm p-1.5 mt-2 bg-blue-100 hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-blue-100 focus:ring-opacity-50 rounded-lg" value="4">
+            Dairy and Eggs
+        </button>
+        <button type="button" id="drinks" name="category_name"
+            class="pacifico mt-3 w-full inline-flex justify-center pacifico font-extralight text-dark-blue text-sm p-1.5 mt-2 bg-blue-100 hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-blue-100 focus:ring-opacity-50 rounded-lg" value="5">
+            Drinks
+        </button>
+        <button type="button" id="condiments" name="category_name"
+            class="pacifico mt-3 w-full inline-flex justify-center pacifico font-extralight text-dark-blue text-sm p-1.5 mt-2 bg-blue-100 hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-blue-100 focus:ring-opacity-50 rounded-lg" value="6">
+            Condiments
+        </button>
+        <button type="button" id="misc" name="category_name"
+            class="pacifico mt-3 w-full inline-flex justify-center pacifico font-extralight text-dark-blue text-sm p-1.5 mt-2 bg-blue-100 hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-blue-100 focus:ring-opacity-50 rounded-lg" value="7">
+            Miscellaneous
+        </button>
+</div>
 
     {{!-- Main Content --}}
     <div class="md:w-3/4 md:h-screen w-screen bg-white">
